frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
