frontend/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-frontend-svc
          servicePort: 80
      - path: /api
        backend:
          serviceName: todo-backend-svc
          servicePort: 80
